# zephyr-lang-swift

./: .gitignore  .swift-format  CMakeLists.txt  CONTRIBUTING.md  Kconfig  README.md  SECURITY.md  toolchain.cmake
.devcontainer/: Dockerfile  compose-dev.yaml  configure.sh  devcontainer.json
.github/: dependabot.yml  labeler.yml
.github/linters/: .jscpd.json  .prettierrc
.github/workflows/: cicd.yml
.trunk/: trunk.yaml
.trunk/configs/: .hadolint.yaml
cmake/: Application.cmake  Dependency.cmake  Fetch.cmake  Import.cmake  Library.cmake  Modules.cmake  SwiftApplication.cmake  SwiftLibrary.cmake  SwiftSupport.cmake
doc/: README.md
samples/: README.md
samples/app/: CMakeLists.txt  prj.conf  sample.yml
samples/app+lib/app/: CMakeLists.txt  prj.conf
samples/app+lib/app/src/: Entrypoint.swift
samples/app+lib/lib/: CMakeLists.txt  Kconfig
samples/app+lib/lib/hello/: Hello.swift
samples/app+lib/zephyr/: module.yml
samples/app/src/: Entrypoint.swift
samples/hello_world/src/: Entrypoint.swift
samples/lib/hello/: CMakeLists.txt
samples/lib/src/: Hello.swift
samples/modules/hello/: CMakeLists.txt  Kconfig  prj.conf  sample.yml
samples/modules/hello/lib/: Hello.swift
samples/modules/hello/zephyr/: module.yml
zephyr/: CMakeLists.txt  module.yml
zephyr-sys/: CMakeLists.txt
zephyr-sys/include/: BridgingHeader.h  module.modulemap
zephyr-sys/src/: Stubs.c  Time.c  main.c
zephyr/lib/: Error.swift  Time.swift  Zephyr.swift
zephyr/lib/time/: Duration.swift  Instant.swift  Time.swift  Timeout.swift
zephyr/src/: Application.swift  Zephyr.swift
